revised some comments from DeKe Guo

--- a/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
+++ b/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
@@ -91,9 +91,9 @@ Such data-intensive applications widely exist in monitoring systems. For example
 Generally, such a sampling task can be defined as a task model by using two properties: \emph{time window} and \emph{sampling interval}. Either a time window or a sampling interval stands for a period of time. As illustrated in Fig. \ref{figure_introduction_scheduling}, the time window means lifetime of a sampling task. The sampling interval indicates that this task should be performed to sample data over the time interval continuously. Universally, sampling tasks can be classified into two cases: discrete point sampling tasks and continuous interval sampling tasks. The former is the special case of the task model. The length of sampling interval of a discrete point sampling task can be regarded aggressively small so that the task requires to be performed via once data sampling. The latter is a general case. That is, a continuous interval sampling task requires to be performed over a time interval continuously. Moreover, the sampling interval of a continuous interval sampling task can be adjusted to move in its \emph{time window} flexibly. In the paper, we focus on the latter, i.e., the continuous interval sampling tasks. \footnote{\noindent For simplicity, ``interval sampling tasks" or ``sampling tasks" or ``tasks" is hereafter referred to as ``continuous interval sampling tasks" without difference.}
 
 %interval sampling task ÖÐÊý?Ý¹²ÏíµÄÒâÒå
-Note that \emph{time window} of more than one  sampling task  may have overlapping time regions. The sampling intervals of those tasks  can be adjusted in the overlapping regions of time.  Data, which is sampled in such overlapping regions once, can be shared by multiple tasks simultaneously.  As illustrated in Fig. \ref{figure_introduction_scheduling}, consider three sampling tasks $t_1$, $t_2$ and $t_3$. since the \emph{time window} of $t_2$ and $t_3$ are overlapping, the sampling intervals of $t_2$ and $t_3$ can be adjusted in the overlapping time region so that data which is sampled in region of data sharing  can be shared by  $t_2$ and $t_3$.  Such a strategy of data sharing is very practical to reduce redundant data sampling and improve the efficiency of WSNs. Moreover, this strategy is extremely important for interval sampling tasks. First, an interval sampling task usually produces a large amount of sampled data each time.  Without such a data sharing strategy, delivering those superfluous sampled data to the sink node will consume more network resources. Second, the execution of those unnecessary data sampling and the transmission of redundant sampled data consume non-trivial energy of the sensor node.
+Note that \emph{time window} of more than one  sampling task  may have overlapping time regions. The sampling intervals of those tasks  can be adjusted in the overlapping regions of time.  Data, which is sampled in such overlapping regions once, can be shared by multiple tasks simultaneously.  As illustrated in Fig. \ref{figure_introduction_scheduling}, consider three sampling tasks $t_1$, $t_2$ and $t_3$. Since the \emph{time window} of $t_2$ and $t_3$ are overlapping, the sampling intervals of $t_2$ and $t_3$ can be adjusted in the overlapping time region so that data which is sampled in region of data sharing  can be shared by  $t_2$ and $t_3$.  Such a strategy of data sharing is very practical to reduce redundant data sampling and improve the efficiency of WSNs. Moreover, this strategy is extremely important for interval sampling tasks. First, an interval sampling task usually produces a large amount of sampled data each time.  Without such a data sharing strategy, delivering those superfluous sampled data to the sink node will consume more network resources. Second, the execution of those unnecessary data sampling and the transmission of redundant sampled data consume non-trivial energy of the sensor node.
 
-Generally, given a set of tasks, data sharing exists in the processes of allocation of task and scheduling of sampling intervals.  \emph{time window} of tasks may be overlapping, when more than one task is allocated to a same sensor node. Accordingly, the sampling intervals of those tasks should be scheduled into the overlapping regions so as to maximize the gain of data sharing. Both the process of task allocation and the process of scheduling of sampling intervals are tightly coupled. The strategy of task allocation has a great impact on the performance of the method of scheduling sampling intervals. If the \emph{time window} of sampling tasks which are allocated to a sensor node are not overlapping, the method of scheduling sampling intervals cannot exploit data sharing to reduce redundant data sampling.  If the method of scheduling sampling intervals is not optimal, each sensor node will still produce redundant sampled data. The goal of maximizing data sharing for the entire network cannot be implemented. Therefore, exploiting the benefits of data sharing involves two challenges for WSNs. The first is the allocation strategy of sampling tasks over the entire wireless sensor network. The second is the scheduling of sampling intervals for a set of tasks which have been allocated to a sensor node. To ease the presentation, we introduce Fig. \ref{figure_introduction} as an illustrative example for the two sub-problems.
+Generally, given a set of tasks, the benefits of data sharing amongst those tasks are dominated by the task allocation as well as  the schedule of sampling intervals.  The \emph{time window} of tasks may overlap, when more than one task is allocated to a same sensor node. Accordingly, the sampling intervals of those tasks should be scheduled into the overlapping regions, so as to maximize the gain of data sharing. Both the task allocation and the  the scheduling method of sampling intervals are tightly coupled. The strategy of task allocation has a great impact on the performance of the scheduling method  sampling intervals. If the \emph{time window} of sampling tasks which are allocated to a sensor node are not overlapping, the method of scheduling sampling scheduling  the schedule of intervals cannot exploit data sharing to reduce redundant data sampling.  If the scheduling method  sampling intervals is not optimal, each sensor node will still produce redundant sampled data. The goal of maximizing data sharing for the entire network cannot be realized. Therefore, exploiting the benefits of data sharing involves two challenges for WSNs. The first is the allocation strategy of sampling tasks over the entire wireless sensor network. The second is  the schedule of sampling intervals for a set of tasks which have been allocated to a sensor node. To ease the presentation, we introduce Fig. \ref{figure_introduction} as an illustrative example for the two sub-problems.
 
 \begin{itemize}
 \item{\bf{Task allocation:}} As demonstrated in Fig. \ref{figure_introduction_allocation}, consider three sensor nodes $s_0$, $s_1$ and $s_2$ in a wireless sensor network. Here, $s_0$ is the sink node which is responsible to allocate sampling tasks to $s_1$ and $s_2$. A data-intensive application injects three sampling tasks  $t_1$, $t_2$ and $t_3$ into the network, as shown in Fig. \ref{figure_introduction_scheduling}. If $t_1$ and $t_2$ have been allocated to $s_1$ and $s_2$, respectively, $t_3$ should be allocated to $s_2$. The reason is that the \emph{time window} of $t_3$ and that of $t_2$ are overlapping and  sampling interval of $t_3$ and that of $t_2$ can be adjusted to implement maximal data sharing. Consider that extensive data-intensive applications generate a large set of sampling tasks. It is extremely difficult to allocate tasks so as to maximize data sharing with a resource-constrained sensor node.
@@ -108,7 +108,7 @@ Although the scheduling problem of sampling intervals has been studied in \cite{
 \centering
 \subfigure[Task scheduling]{\includegraphics[width=0.45\columnwidth]{Figures/figure_introduction_scheduling}\label{figure_introduction_scheduling}}
 \subfigure[Task allocation]{\includegraphics[width=0.5\columnwidth]{Figures/figure_introduction_allocation}\label{figure_introduction_allocation}}
-\caption{The illustrative examples for the scheduling of sampling intervals in the left panel and the allocation of tasks in the right panel.} \label{figure_introduction}
+\caption{The illustrative examples for  the schedule of sampling intervals in the left panel and the allocation of tasks in the right panel.} \label{figure_introduction}
 \end{figure}
 %Assume a task set $T$ and $T\mathrm{=}\{t_1,t_2,t_3\}$, $t_2$ and $t_3$ should be allocated to a sensor node and their sampling intervals should be scheduled to achieve maximal data sharing.
 In this paper, we focus on maximizing the benefits of data sharing amongst sampling tasks, bearing the view of an entire wireless sensor network rather than a single sensor node. Our contributions are outlined as follows:
@@ -137,7 +137,7 @@ Compression techniques based data collection significantly reduce redundancy of 
 
 \section{Preliminaries}
 \label{section_prelimenary}
-In this section, the basic task and network models are first formalized. We characterize the task allocation and the scheduling of sampling intervals as a joint optimization problem. Then, we define a dedicated metric for measuring the data sharing. Finally, we prove that the joint optimization problem is NP-hard.
+In this section, the basic task and network models are first formalized. We characterize the task allocation and  the schedule of sampling intervals as a joint optimization problem. Then, we define a dedicated metric for measuring the data sharing. Finally, we prove that the joint optimization problem is NP-hard.
 
 \begin{table}[b]
 \centering
@@ -205,7 +205,7 @@ Given a task $t$ and a sensor node set $S$, the task set which has been allocate
 $s.t.:\ I_i\subseteq[b_i,e_i],i\mathrm{=}1,...,n;$
 \end{definition}
 
-\begin{definition}[The scheduling of sampling intervals]
+\begin{definition}[ the schedule of sampling intervals]
 Given a task set $T$ with $|T|\mathrm{=}n$, the optimization problem of scheduling sampling intervals of tasks in $T$ is defined as follows:
 \begin{equation}
 \min{|\biguplus_{t_i\mathrm{\in}T} I_i|}
@@ -246,7 +246,7 @@ I_{ij}\subseteq[b_i,e_i],i\mathrm{=}1,...,n;\\
 \end{equation}
 \end{definition}
 
-Unlike point sampling tasks, the length of different sampling intervals varies a lot, and such a sampling interval can be moved in the time window of a task which it belongs to, the scheduling of sampling intervals, the allocation of tasks or the joint optimization problem are extremely difficult. When $r\mathrm{=}k$, we should allocate each task to all candidate sensor nodes. The solution of task allocation is determined solely. Generally, when $0\mathrm{<}r\mathrm{<}k$, the object function is non-linear, which makes the optimization problem become very difficult. This kind of non-linear programming problem has no universal efficient solution. Several methods, including branch and bound techniques, require high computational complexity and are not applied to a wireless sensor node. Considering the limitation of computing and memory resources of sensor nodes, the non-linear programming problem becomes pretty hard to be solved.
+Unlike point sampling tasks, the length of different sampling intervals varies a lot, and such a sampling interval can be moved in the time window of a task which it belongs to,  the schedule of sampling intervals, the allocation of tasks or the joint optimization problem are extremely difficult. When $r\mathrm{=}k$, we should allocate each task to all candidate sensor nodes. The solution of task allocation is determined solely. Generally, when $0\mathrm{<}r\mathrm{<}k$, the object function is non-linear, which makes the optimization problem become very difficult. This kind of non-linear programming problem has no universal efficient solution. Several methods, including branch and bound techniques, require high computational complexity and are not applied to a wireless sensor node. Considering the limitation of computing and memory resources of sensor nodes, the non-linear programming problem becomes pretty hard to be solved.
 
 
 \subsection{Interval data sharing based minimization of the amount of sampled data}
@@ -485,7 +485,7 @@ Note that both the space complexity and time complexity of Algorithm \ref{algori
             \If {$d(t_i,t_j)\mathrm{==}0$}
             \State return $T$.
             \EndIf
-            \State insert a novel task $t_{ij}$ into $T$ in the descending order of end time. Here, $t_{ij} \mathrm{\leftarrow} t_i\mathrm{\otimes} t_j$ .
+            \State insert a novel task $t_{ij}$ into $T$ in the descending order of end time.
             \State remove $t_i$ and $t_j$ from $T$.
         \EndWhile
         \State return $T$.
@@ -805,7 +805,7 @@ At first, we evaluate the performance of our Algorithm \ref{algorithm_combine}, 
 %Fig. 6(a)-(b)
 Fig. \ref{evaluation1_data_sampled_tasks} and Fig.  \ref{evaluation1_data_sampled_interval} illustrate the number of transmitted packets when using \emph{COMBINE}, \emph{GA} and \emph{DP}, by varying the cardinality of a sampling task set (Fig. \ref{evaluation1_data_sampled_tasks}) or  the interval length of a sampling task (Fig. \ref{evaluation1_data_sampled_interval}). Specifically, the interval length of a sampling task is set to $5$ in Fig. \ref{evaluation1_data_sampled_tasks} while the cardinality of each task set is fixed to $30$ in Fig. \ref{evaluation1_data_sampled_interval}. It is easy to observe from Fig. \ref{evaluation1_data_sampled_tasks}  and Fig \ref{evaluation1_data_sampled_interval} that the number of transmitted packets increases with both the  growth of the number of tasks and the interval length. However, \emph{COMBINE} performs better and returns smaller number of transmitted packets  than \emph{GA}. This happens because our algorithm combines overlapping tasks which have the maximal value of data sharing for each step. Thus, each step is the current optimal choice. Consider that \emph{GA} schedules the sampling intervals of tasks based on the end time of a task, it cannot make sure each scheduling choice is optimal. That is the reason why \emph{COMBINE} outperforms \emph{GA}. Meanwhile, Fig. \ref{evaluation1_data_sampled_tasks} and Fig. \ref{evaluation1_data_sampled_interval} indicate \emph{COMBINE} achieves 2-factor approximation result vs. the optimal result. This verifies the correctness of  the Theorem \ref{theorem_schedule}.
 
-In Fig. \ref{evaluation1_voltage}, we run  both \emph{COMBINE} and \emph{GA} methods on two sensor nodes to test their energy usage. The terminal voltage of batteries equipped for a sensor node is measured every $100$  time slots. The initial value is $2.864$V. It is apparent that while the terminal battery voltage decreases due to the energy consumption, \emph{COMBINE}  consumes less energy  than that \emph{GA} does. This is because that \emph{COMBINE} reduces more unnecessary sampled data than \emph{GA}. Since a sensor node uses up much more energy when listening, receiving and sending data, \emph{COMBINE} greatly cuts down  energy consumption and prolongs the lifetime of the entire wireless sensor network. Precisely, \emph{COMBINE} decreases energy consumption by $4.85\%$ per slot on average. In Fig. \ref{evaluation1_data_loss}, we test the data loss rate of different methods during data transmission by  changing the number of tasks on a single sensor node. We observe  that the data loss rate increases with the growth of the number of tasks. We are delighted to see that \emph{COMBINE} achieves the smaller data loss rate than \emph{GA}. Precisely, \emph{COMBINE} decreases energy consumption by 4\% per slot on average. Here, a time slot is a period of 50 seconds. Since a wireless sensor node works over decades of days, such improvements is appreciable and worthy to being exploited. Moreover, \emph{GA} is specifically designed for the scheduling of sampling intervals. It is unknown how to use \emph{GA} for task allocation. Adopting a random strategy of task allocation for 300 tasks in a  $k$-coverage and $r$-redundant network with $k\mathrm{=}5$ and $r\mathrm{=}2$, \emph{GA} consumes more energy and leads to more data loss rate than our solution by over $35\%$ and $30\%$ due to poorly exploiting data sharing among tasks. Such benefit becomes more obvious when the number of tasks increases. The reduction of redundant sampled data relieves the workload of intra-network  communication and decreases transmission delay and congestion by using \emph{COMBINE}.
+In Fig. \ref{evaluation1_voltage}, we run  both \emph{COMBINE} and \emph{GA} methods on two sensor nodes to test their energy usage. The terminal voltage of batteries equipped for a sensor node is measured every $100$  time slots. The initial value is $2.864$V. It is apparent that while the terminal battery voltage decreases due to the energy consumption, \emph{COMBINE}  consumes less energy  than that \emph{GA} does. This is because that \emph{COMBINE} reduces more unnecessary sampled data than \emph{GA}. Since a sensor node uses up much more energy when listening, receiving and sending data, \emph{COMBINE} greatly cuts down  energy consumption and prolongs the lifetime of the entire wireless sensor network. Precisely, \emph{COMBINE} decreases energy consumption by $4.85\%$ per slot on average. In Fig. \ref{evaluation1_data_loss}, we test the data loss rate of different methods during data transmission by  changing the number of tasks on a single sensor node. We observe  that the data loss rate increases with the growth of the number of tasks. We are delighted to see that \emph{COMBINE} achieves the smaller data loss rate than \emph{GA}. Precisely, \emph{COMBINE} decreases energy consumption by 4\% per slot on average. Here, a time slot is a period of 50 seconds. Since a wireless sensor node works over decades of days, such improvements is appreciable and worthy to being exploited. Moreover, \emph{GA} is specifically designed for  the schedule of sampling intervals. It is unknown how to use \emph{GA} for task allocation. Adopting a random strategy of task allocation for 300 tasks in a  $k$-coverage and $r$-redundant network with $k\mathrm{=}5$ and $r\mathrm{=}2$, \emph{GA} consumes more energy and leads to more data loss rate than our solution by over $35\%$ and $30\%$ due to poorly exploiting data sharing among tasks. Such benefit becomes more obvious when the number of tasks increases. The reduction of redundant sampled data relieves the workload of intra-network  communication and decreases transmission delay and congestion by using \emph{COMBINE}.
 
 \subsection{Performance of data sharing across WSNs}
 \label{section_performance_wsn}
@@ -858,7 +858,7 @@ In this paper, we aim to minimize the sampled data for a sampling task set by co
 
 \section{Conclusion}
 \label{conclusion}
-Many applications of wireless sensor networks  pursue to perform a set of interval sampling tasks for decision-making.  In this paper, we focus on minimizing the volume of sampled data in a $k$-coverage and $r$-redundant wireless sensor network. The solving of this optimization problem depends on the optimization of  two sub-problems: the problem of task allocation amongst candidate sensor nodes  and the problem of scheduling sampling intervals of sampling tasks which are allocated to a sensor node. Since the strategy of task allocation dominates the performance of the scheduling of sampling intervals of sampling tasks.  We jointly optimize both sub-problems. To be specific, we first propose a crucial operation for the problem, namely, \emph{COMBINE}, and give a rigorous bound of its performance. Furthermore, we present our method which allocates tasks and computes the amount of sampled data by using \emph{CATS}.  The effectiveness and scalability of our proposals is evaluated by employing a testbed and TOSSIM, respectively. The extensive empirical study indicates that our method  reduces the amount of sampled data significantly, saves  rare energy considerably, and improves the quality of communication apparently  due to the decrease of data loss rate.
+Many applications of wireless sensor networks  pursue to perform a set of interval sampling tasks for decision-making.  In this paper, we focus on minimizing the volume of sampled data in a $k$-coverage and $r$-redundant wireless sensor network. The solving of this optimization problem depends on the optimization of  two sub-problems: the problem of task allocation amongst candidate sensor nodes  and the problem of scheduling sampling intervals of sampling tasks which are allocated to a sensor node. Since the strategy of task allocation dominates the performance of  the schedule of sampling intervals of sampling tasks.  We jointly optimize both sub-problems. To be specific, we first propose a crucial operation for the problem, namely, \emph{COMBINE}, and give a rigorous bound of its performance. Furthermore, we present our method which allocates tasks and computes the amount of sampled data by using \emph{CATS}.  The effectiveness and scalability of our proposals is evaluated by employing a testbed and TOSSIM, respectively. The extensive empirical study indicates that our method  reduces the amount of sampled data significantly, saves  rare energy considerably, and improves the quality of communication apparently  due to the decrease of data loss rate.
 
 
 %\bibliographystyle{IEEEtran}
